[gd_scene load_steps=5 format=3 uid="uid://bts4mwr2j36yl"]

[ext_resource type="Script" path="res://levels/menu/main.gd" id="1_6ybr0"]
[ext_resource type="Texture2D" uid="uid://dewnmtx6dvdte" path="res://levels/menu/B_btn.png" id="2_aohrt"]
[ext_resource type="Texture2D" uid="uid://bm3dm8h4k4sj0" path="res://levels/menu/C_btn.png" id="3_2l7xn"]
[ext_resource type="Texture2D" uid="uid://c8fuogcbjkuwh" path="res://levels/menu/A_btn.png" id="3_b75om"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_6ybr0")

[node name="PlayButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 100.0
offset_right = 252.0
offset_bottom = 166.0
texture_normal = ExtResource("2_aohrt")

[node name="SettingsButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 200.0
offset_right = 252.0
offset_bottom = 266.0
texture_normal = ExtResource("3_2l7xn")

[node name="QuitButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 300.0
offset_right = 252.0
offset_bottom = 366.0
texture_normal = ExtResource("3_b75om")

[connection signal="pressed" from="PlayButton" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_btn_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_btn_pressed"]
